# cppfunkin_2

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
assets/characters/defected/: spritesheet.xml
assets/images/noteskins/funkin/: notes.xml  strums.xml
assets/scripts/: testscript.lua
assets/songs/titular/: titular-chart.json  titular-metadata.json
assets/stages/: desert.lua
src/: main.cpp
src/funkin/: Camera.cpp  Camera.hpp  Game.cpp  Game.hpp  Group.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  Sprite.cpp  Sprite.hpp
src/funkin/data/: Song.cpp  Song.hpp
src/funkin/data/animation/: Animation.cpp  Animation.hpp  AnimationData.hpp  Frame.hpp
src/funkin/game/: AnimationController.cpp  AnimationController.hpp  Conductor.cpp  Conductor.hpp  Note.cpp  Note.hpp  NoteLane.cpp  NoteLane.hpp  PlayField.cpp  PlayField.hpp  StrumNote.cpp  StrumNote.hpp
src/funkin/modding/: LuaScript.cpp  LuaScript.hpp
src/funkin/objects/notes/: Note.cpp  Note.hpp  NoteLane.cpp  NoteLane.hpp  PlayField.cpp  PlayField.hpp  StrumNote.cpp  StrumNote.hpp
src/funkin/scenes/: PlayScene.cpp  PlayScene.hpp
